Fixed horizontal scrollbar and some small tweaks.

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -23,6 +23,7 @@ body{
 	color: #000000;
 	padding:0;
 	margin: 0;
+	overflow-x: hidden;
 }
 
 .centered{
@@ -57,7 +58,9 @@ body .container{
 	
 }
 
+
 section#hello{
+	font-size: 10pt;
 	background-color: #000000;
 }
 section#projects{
